--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,29 @@
-image: xcgd/dronebase
-script:
-    python setup.py develop
-    pip install nose
-    pip install coverage
-    pip install nosexcover
-    python setup.py test
+# vim: set shiftwidth=2 softtabstop=2:
+
+clone:
+  hg:
+    image: plugins/hg
+
+pipeline:
+
+  test:
+    image: python:3
+    pull: true
+    commands:
+      - pip install tox
+      - tox
+
+  black:
+    image: houzefaabba/python3-black
+    pull: true
+    commands:
+      # Ensure our code is black-valid <https://pypi.org/project/black/>.
+      - black --check .
+
+  notify:
+    image: plugins/slack
+    channel: dev
+    username: drone
+    secrets: [slack_webhook]
+    when:
+      status: [failure, success]
