--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,14 @@
 [egg_info]
-tag_build = dev
-tag_svn_revision = true
+tag_build = 
+tag_svn_revision = false
+tag_date = 0
 
 [nosetests]
-detailed-errors=1
-with-doctest=1
-verbose=True
+detailed-errors = 1
+with-doctest = 1
+verbose = True
 
 [aliases]
 test = nosetests --detailed-errors --with-doctest --cover-package=py3o.template
-release = egg_info -RDb "" sdist --formats=gztar,zip bdist_egg bdist_wheel
-release_upload = egg_info -RDb "" sdist --formats=gztar,zip bdist_egg bdist_wheel upload
+release = egg_info -RDb "" sdist --formats=gztar bdist_egg bdist_wheel
+
