--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,12 @@
 [egg_info]
-tag_build = 
+tag_build = .dev1
 tag_svn_revision = false
-tag_date = 0
 
 [nosetests]
-detailed-errors = 1
-with-doctest = 1
-verbose = True
+detailed-errors=1
+with-doctest=1
+verbose=True
 
 [aliases]
 test = nosetests --detailed-errors --with-doctest --cover-package=py3o.template
 release = egg_info -RDb "" sdist --formats=gztar bdist_egg bdist_wheel
-
