--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 syntax: glob
-.tox/*
+.tox/
 .eggs/*
 **/*.pyc
 **/*.pyo
 *.swp
 .tmp*
 .coverage
-htmlcov/*
+htmlcov/
 coverage.xml
 nosetests.xml
 example/TMP
