--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@
 ;     pip install tox
 ;
 [tox]
-envlist = py27,py3,pycodestyle
+#envlist = py27,py3,pycodestyle
+envlist = py27,pycodestyle
 
 [testenv]
 deps =
