--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ example/py3o_example_output.odt
 example/py3o_example_page_break_output.odt
 example/py3o_example_output_single_cell.odt
 *.egg-info
-dist/*
-build/*
+dist/
+build/
 lib/*
 *.orig
 *.log
